<resources>
    <string name="app_name">Meus Clientes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Cliente</string>
    <string name="nav_header_subtitle">Joao Henrique</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Sair</string>

    <!-- Opções do menu principal -->


    <string name="modelo_fragment">Fragmento Modelo</string>

    <!-- Opções do menu lateral Drawer -->
    <string name="fragmento_adicionar_novo_cliente">Adicionar Cliente</string>
    <string name="fragmento_vermelho">Fragmento Vermelho</string>
    <string name="fragmento_azul">Fragmento Azul</string>


    <!-- Layout de adicionar novo cliente -->
    <string name="txt_titulo">Adicionar novo Cliente</string>
    <string name="txt_hint_nome_completo">Nome Completo</string>
    <string name="txt_hint_telefone">Telefone</string>
    <string name="txt_hint_email">Email</string>
    <string name="txt_hint_cep">Cep</string>
    <string name="txt_hint_logradouro">Logradouro</string>
    <string name="txt_hint_numero">Número</string>
    <string name="txt_hint_bairro">Bairro</string>
    <string name="txt_hint_cidade">Cidade</string>
    <string name="txt_hint_estado">Estado</string>
    <string name="txt_termos_uso">Termos de Uso</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_salvar">Salvar</string>

</resources>
